--- a/src/main/resources/application-prd.yml
+++ b/src/main/resources/application-prd.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://${DB_HOST}:3306/addiction?useSSL=true&serverTimezone=Asia/Seoul
+    url: jdbc:mysql://${DB_HOST}:3306/puppynote?useSSL=true&serverTimezone=Asia/Seoul
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -23,7 +23,7 @@ spring:
   data:
     mongodb:
       uri: ${MONGO_DB_URL}
-      database: addiction
+      database: puppynote
     logging:
       level:
         p6spy: info
@@ -36,7 +36,7 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: addiction1215@gmail.com
+    username: puppynote1215@gmail.com
     password: ${EMAIL_PASSWORD}
     properties:
       mail:
