--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,3 +1,7 @@
+server:
+  servlet:
+    context-path: /puppynote
+
 spring:
   datasource:
     url: jdbc:mysql://${DB_HOST}:3306/puppynote?useSSL=true&serverTimezone=Asia/Seoul
