--- a/src/main/resources/application-prd.yml
+++ b/src/main/resources/application-prd.yml
@@ -21,6 +21,17 @@ spring:
         jdbc:
           exception-handling: ignore
 
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: puppynote0330@gmail.com
+    password: ${EMAIL_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          starttls:
+            enable: true
+          auth: true
 
 oauth:
   kakao:
