--- a/src/main/resources/application-prd.yml
+++ b/src/main/resources/application-prd.yml
@@ -45,3 +45,11 @@ oauth:
 
 jwt:
   secret-key: ${JWT_SECRET_KEY}
+
+aws:
+  access-key: ${AWS_ACCESS_KEY}  # AWS IAM Access Key
+  secret-key: ${AWS_SECRET_KEY}  # AWS IAM Secret Key
+  s3:
+    region: ap-northeast-2  # Seoul Region
+    bucket:
+      puppy-profile: ${PUPPY_PROFILE_BUCKET}  # 사용자 관련 파일 버킷
