--- a/src/main/resources/application-prd.yml
+++ b/src/main/resources/application-prd.yml
@@ -53,3 +53,4 @@ aws:
     region: ap-northeast-2  # Seoul Region
     bucket:
       puppy-profile: ${PUPPY_PROFILE_BUCKET}  # 사용자 관련 파일 버킷
+      walk-photo: ${WALK_PHOTO_BUCKET}  # 산책 사진 버킷
