--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -51,3 +51,4 @@ aws:
     region: ap-northeast-2  # Seoul Region
     bucket:
       puppy-profile: testpuppybucket  # 사용자 관련 파일 버킷
+      walk-photo: testpuppybucket  # 산책 사진 버킷
