--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -52,4 +52,4 @@ aws:
     bucket:
       puppy-profile: testpuppybucket  # 사용자 관련 파일 버킷
       walk-photo: testpuppybucket  # 산책 사진 버킷
-      pet-item-image: testpuppybucket  # 용품 이미지 버킷
+      pet-item-photo: testpuppybucket  # 용품 이미지 버킷
